--- a/src/world.yml
+++ b/src/world.yml
@@ -99,3 +99,7 @@ Preventions:
   ItemFrame: true
   ## EconomySign, if true, This plugin will try to prevent creative players from interacting with economy signs.
   EconomySign: true
+  ## VehicleDrop, if trus, This plugin will try to prevent minecarts and boats created by creative player to drop!
+  VehicleDrop: true
+  ## VehicleLimit, set a limit of how much vehicles a creative player can create without destroying the old one
+  VehicleLimit: -1
