--- a/src/messages.yml
+++ b/src/messages.yml
@@ -12,20 +12,20 @@ ingame:
     new: "&7New Version Found: &4{0}&7 (You have: &4{1}&7)"
     visit: "&7Visit:&4 http://bit.ly/creativecontrol/"
   blocks:
-    nocreative: "[SMALL]&7 Creative mode &4isn''t&7 allowed in this world"
-    nosurvival: "[SMALL]&7 Survival mode &4isn''t&7 allowed in this world"
-    cantplace: "[TAG] &7You can''t place {0}"
-    snowgolem: "[TAG] &7You can''t create Snow Golens"
-    irongolem: "[TAG] &7You can''t create Iron Golens"
-    wither: "[TAG] &7You can''t create Withers"
-    cantbreak: "[TAG] &7You can''t break {0}"
+    nocreative: "[SMALL]&7 Creative mode &4isn't&7 allowed in this world"
+    nosurvival: "[SMALL]&7 Survival mode &4isn't&7 allowed in this world"
+    cantplace: "[TAG] &7You can't place {0}"
+    snowgolem: "[TAG] &7You can't create Snow Golens"
+    irongolem: "[TAG] &7You can't create Iron Golens"
+    wither: "[TAG] &7You can't create Withers"
+    cantbreak: "[TAG] &7You can't break {0}"
     pertence: "[TAG] &7This block belongs to &4{0}"
-    bedrock: "[TAG] &7You can''t break that bedrock!"
-    creative: "[TAG] &7This block can''t be breaked in survival mode!"
+    bedrock: "[TAG] &7You can't break that bedrock!"
+    creative: "[TAG] &7This block can't be breaked in survival mode!"
     nodrop: "[TAG] &7That block was placed in creative, Therefore was not dropped."
   entity:
-    pvp: "[TAG] &7You can''t attack other players!"
-    mob: "[TAG] &7You can''t attack {0}"
+    pvp: "[TAG] &7You can't attack other players!"
+    mob: "[TAG] &7You can't attack {0}"
     vehicle: "[TAG] &7You reach the limit of vehicles, destroy the old ones!"
   player:
     cmdblacklist: "[SMALL]&7 This comand &4isn''t&7 allowed in creative mode!"
@@ -47,21 +47,25 @@ ingame:
     CreativeLeave: "&7You leave the &4creative&7 region"
     SurvivalWelcome: "&7Welcome to the &4survival&7 region"
     SurvivalLeave: "&7You leave the &4survival&7 region"
-  blockInfo:
-    owner: "&4Owner: &7{0}"
-    data: "&4Block Data: &7World: {0}&4, X &7{1}&4, Y &7{2}&4, Z &7{3} &4Type: &7{4}"
-    cachedTrue: "&4Cached: &7true"
-    cachedFalse: "&4Cached: &7false"
-    memoryStatus: "&4Status: &7In Memory [Queue]"
-    dbStatus: "&4Status: &7SQL Database"
-    notIn: "[TAG] &cThis block isn't in the database"
-  addBlock:
-    already: "[TAG] &cThis block is already registred"
-    added: "[TAG] &aBlock added to the database"
-    cant: "[TAG] &cThis block type are excluded"
-  delBlock:
-    deleted: "[TAG] &aBlock removed from the database"
-    
+Manager:
+  BlockInfo:
+    World: "&cThis command can't be used in this world."
+    Protectable: "&cThis block can't be protected!"
+    Unprotected: "&cThis block isn't protected!"
+    Owner: "&4Owner&8:&7 {0}"
+    Data: "&4Data&8:&7 W&8: &4{0}&7 X&8:&4{1}&7 Y&8:&4{2}&7 Z&8:&4{3}&7 T&8:&4{4}&8/&4{5}"
+    Perm: "&7Permissions&8: &4{0}"
+    Status: "&7Status: &4{0}&7 &4{1}"
+    Created: "&7Created in: &4{0}"
+    InCache: "&4In Cache &7e"
+    InDb: "&4SQL Database"
+    InLine: "&4On Queue&8 [Memory]"
+  BlockAdd:
+    Already: "&cThis block is protected already!"
+    Success: "&4Block protected successfuly!"
+  BlockDel:
+    Success: "&4Block removed from the database"
+
 Commands:
   type: "[TAG] &8Type &4'/cc help'&8 to see the commands"
   NotHere: "[TAG] This command can''t be used here, sorry."
@@ -69,7 +73,6 @@ Commands:
   Tool:
     deactivated: "[TAG] &cUtility tool deactivated!"
     activated: "[TAG] &aUtility tool activated!"
-    invFull: "[TAG] &cYour Inventory is full."
     morehelp: "&7Type: &4/cc tool [add/del] ? &7- To see more help"
     add:
       help: "&4/cc tool add - &7Give you a tool to &4add blocks&7 manualy to the database, every block that you &4left click&7 will be added to the database &4in your name&7, if you &4right click&7, you will see &4informations&7 about the block"
@@ -107,10 +110,6 @@ Commands:
     morehelp: "&7Type: &4/cc cleanup [all/type/player/world] ? &7- To see more help"
     processed: "[TAG] &aBlocks successfully processed!"
     cleanup:
-      loading: "&7Loading database..."
-      size: "&7Loaded &4{0}&7 Protections in &4{1}&7 ms."
-      searching: "&7Searching for corrupted protections..."
-      removed: "&7Removed &4{0}&7 corrupted protections in &4{1}&7 ms."
       usage: "&c/cc cleanup corrupt - &7Remove corrupted protections."
       help: "&7cc cleanup corrupt - &7This command will &4remove&7 all protections that the block type in the world isnt compatible with the block type in the database."
     all:
@@ -132,13 +131,13 @@ Commands:
   Region:
     define: "&4/cc region define [creative/survival] [name]"
     morehelp: "&7Type: &4/cc region [define/remove/expand] ? &7- To see more help"
+    Created: "&7Region created successfuly!"
     Creative:
       DefineHelp: "&4/cc region define creative [name] - &7This command create an region to use &$gamemode creative only&7, the player &4need permission &7to use this area."
       Usage: "&4/cc region define creative [name] - &7Create a Creative Region"
     Survival:
       DefineHelp: "&4/cc region define survival [name] - &7This command create an region to use &$gamemode survival only&7, the player &4don''t need permission &7to use this area."
       Usage: "&4/cc region define survival [name] - &7Create a Survival Region"
-    Created: "&7Region created successfuly!"
     Remove:
       Usage: "&4/cc region remove [name] - &7Remove an Region"
       Success: "&7Region removed successfuly!"
@@ -167,11 +166,9 @@ Commands:
     morehelp: "&7Type: &4/cc check [player/status] ? &7- To see more help"
     status:
       help: "&4/cc check status - &7This command prints the total players in survival and creative mode"
-      usage: "&4/cc check status - &7Show the total players with gamemode"
       there: "&7Here are: &4{0}&7 Survival and &4{1}&7 Creative players"
     player:
       help: "&4/cc check [player] - &7This command show the current gamemode of some player"
-      usage: "&4/cc check [player] - &7Show the current gamemode"
       hasGm: "&7{0} has gamemode &4{1}"
       notOn: "&7{0} &4is not&7 online!"
   Friend:
