A few more details on report, addUnsafeEnchantment and set monitor default to false

--- a/src/settings.yml
+++ b/src/settings.yml
@@ -68,7 +68,7 @@ PlayerData:
 ## Performance monitor
 Monitor:
   ## Enabled the performance monitor
-  Enabled: true
+  Enabled: false
   Track:
     ## Track event times
     Events: true
