--- a/src/settings.yml
+++ b/src/settings.yml
@@ -13,6 +13,13 @@ Database:
   database: minecraft
   ## prefix, the prefix used to create the tables in the sql database
   prefix: cc_
+  
+## this section will define wich group the player will be added when he change his gamemode to creative, the player will not be removed from his original group
+Permissions:
+  ## MoveFrom, the group that will be affected when the player change his gamemode
+  MoveFrom: MembersSurvival
+  ## MoveTo, the group that the player will be added when he change his gamemode to creative
+  MoveTo: MembersCreative
 
 ## if you have an larger server with tons of creative players placing/breaking blocks, you should increase the "count", decrease the "sleep" and "each"
 Queue:
