--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -3,7 +3,7 @@ version: 5.7.1
 author: FurmigaHumana
 description: Keep yours creatives in the line!
 main: me.FurH.CreativeControl.CreativeControl
-softdepend: ['Vault', 'WorldEdit', 'LogBlock', 'AuthMe', 'xAuth', 'MobArena', 'Multiverse-Inventories']
+softdepend: ['Vault', 'WorldEdit', 'LogBlock', 'AuthMe', 'xAuth', 'MobArena', 'Multiverse-Inventories', 'FCoreLib']
 commands:
   creativecontrol:
     aliases: [cc, ccontrol]
