--- a/src/main/java/settings.yml
+++ b/src/main/java/settings.yml
@@ -1,5 +1,5 @@
 Database:
-  ## MySQL, the database type, can be SQLite, MySQL or H2.
+  ## MySQL, the database type, can be SQLite, MySQL or H2
   Type: SQLite
   ## host, the MySQL host name
   host: localhost
@@ -7,37 +7,37 @@ Database:
   port: 3306
   ## user, the MySQL user name
   user: root
-  ## pass, the MySQL password
+  ## pass, the MySQL password, '' if none.
   pass: 123
   ## database, the MySQL database to be used by this plugin
   database: minecraft
   ## prefix, the prefix used to create the tables in the sql database
   prefix: crcr_
 
-## this section will define wich group the player will be added when he change his gamemode to creative, the player will not be removed from his original group
+## This section will define which group the player will be added when he changes his gamemode.
 Permissions:
-  ## Enabled, if true, this system will be used
+  ## Enabled, if true, this system will be enabled, in way to use this, you must set it to true.
   Enabled: false
-  ## Move, if true, the player will be removed from his original group and added to the creative group
+  ## Move, if true, the player will be removed from his original group and added to the creative group, by default the player is just added to the new group.
   Move: false
-  ## MoveFrom, the group that will be affected when the player change his gamemode
+  ## MoveFrom, the group that will be affected when the player change his gamemode, the player will only be moved if he is a member of this group.
   MoveFrom: MembersSurvival
   ## MoveTo, the group that the player will be added when he change his gamemode to creative
   MoveTo: MembersCreative
 
-## if you have an larger server with tons of creative players placing/breaking blocks, you should increase the "count", decrease the "sleep" and "each"
+## if you have an larger server with tons of creative players placing/breaking blocks, you should increase the "count" and decrease the "sleep" and "each"
 Queue:
-  ## each, set here, the time in milliseconds to wait after each execution.
+  ## each, set here, the time in milliseconds to wait after each execution. (1000 = 1 second)
   each: 50
   ## count, set here, the number of queries to run after make a bigger pause
   count: 50
-  ## sleep, set here, the time in milliseconds to wait after the count being reached.
+  ## sleep, set here, the time in milliseconds to wait after the count being reached. (1000 = 1 second)
   sleep: 5000
 
 Cache:
   ## MaxCapacity, the maximum cache capacity, higher this value is, better will be the performance, but also the memory usage will increase.
   MaxCapacity: 15000
-  ## PreCache, the amount of items to be cached on startup
+  ## PreCache, the amount of items to be cached on startup, if you have a big database, this may increase the load time.
   PreCache: 10000
 
 Configurations:
@@ -53,19 +53,19 @@ Updater:
   Enabled: true
 
 Selection:
-  ## UseWorldEdit, if true, worldedit will be used to make selections.
+  ## UseWorldEdit, if true, worldedit will be used to make selections. Otherwise the tool defined below will be used.
   UseWorldEdit: true
   ## The Item ID used to select regions, if UseWorldEdit is false
   Tool: 369
 
 Events:
-  ## Use Player Move Event? This may take a lot of resources on large servers, but is required to Creative/Survival regions work.
+  ## Use PlayerMoveEvent? This may take a lot of resources on large servers, but is required to Creative/Survival regions work.
   PlayerMove: false
-  ## Enable MiscProtections? This may take some extra resource, but will be much more comfortable to play with creative mode.
+  ## Enable MiscProtections? Not recommended to use, I'll probably remove it on future releases.
   MiscProtection: false
 
 PlayerData:
-  ## Inventory, if true, will have an inventory to survival and other to creative
+  ## Inventory, if true, players will have an inventory to survival, other to creative an other to adventurer
   Inventory: true
   ## Status, if true, will save the player survival status [e.g Health, Food, etc]
   Status: true
