--- a/src/main/java/world.yml
+++ b/src/main/java/world.yml
@@ -20,7 +20,7 @@ BlackList:
   ItemInteract: 23, 54, 58, 61, 62, 84, 116, 117, 130, 145
   ## Inventory, list here, all block/item ids that will be automatically removed from creative players inventories.
   Inventory: []
-  ## EconomySign, list here, the first line of all signs that creative players will be unable to interact with.
+  ## EconomySign, list here, the line of all signs that creative players will be unable to interact with.
   ## Obs: DONT INCLUDE [] or color codes, and use _ for spaces. This option does not work well, is recomended to use the permission system.
   EconomySigns: buy, sell, trade
 
