--- a/src/main/java/messages.yml
+++ b/src/main/java/messages.yml
@@ -32,13 +32,9 @@ Limits:
   vehicles: "&7You reach the limit of vehicles, destroy the old ones!"
 
 Regions:
-  ## Use {0} to replace with the region name
-  welcome_creative: "&7You have entered in a creative region!"
-  welcome_survival: "&7You have entered in a survival region!"
-  farewell_creative: "&7You have left a creative region!"
-  farewell_survival: "&7You have left a survival region!"
-  creative_unallowed: "&7Creative mode is not allowed in this world!"
-  survival_unallowed: "&7Survival mode is not allowed in this world!"
+  welcome: "&7You have entered in a &4{0}&7 region!"
+  farewell: "&7You have left a creative region!"
+  unallowed: "&4{0}&7 mode is not allowed in this world!"
   cant_here: "&4You can't change your gamemode here!"
 
 BlackList:
